--- a/CS350_Engine/CS350_Engine.vcxproj.filters
+++ b/CS350_Engine/CS350_Engine.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="AABB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CollisionSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h">
@@ -183,6 +186,9 @@
       <Filter>Source Files\Math</Filter>
     </ClInclude>
     <ClInclude Include="Collision.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionSystem.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
