--- a/CS350_Engine/CS350_Engine.vcxproj.filters
+++ b/CS350_Engine/CS350_Engine.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="BSP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CollisionSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h">
@@ -202,6 +205,9 @@
     </ClInclude>
     <ClInclude Include="BSP.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionSystem.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
